k8s-manifests/prod/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onthetop-backend-ingress # Ingress의 이름
  namespace: onthetop-backend # Ingress가 배포될 네임스페이스
  annotations:
    kubernetes.io/ingress.class: alb # AWS ALB Ingress Controller를 사용함을 명시
    alb.ingress.kubernetes.io/scheme: internet-facing # 인터넷에서 접근 가능한 ALB 생성
    alb.ingress.kubernetes.io/target-type: ip # Pod의 IP 주소로 트래픽 라우팅

    # 기존 Argo CD Ingress와 동일한 로드 밸런서
    alb.ingress.kubernetes.io/group.name: onthetop-services

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]' # 80/443 포트 모두 리스닝
    # HTTP 요청을 HTTPS 443 포트로 301 리디렉션
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:514883192355:certificate/f3093065-c635-4a0c-882e-416f5a4dea97

    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # 애플리케이션의 헬스체크 경로. 실제 애플리케이션의 헬스체크 엔드포인트로 변경 필요.
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP # 헬스체크 프로토콜
    alb.ingress.kubernetes.io/success-codes: '200,307' # 헬스체크 성공으로 간주할 HTTP 상태 코드
spec:
  ingressClassName: alb # Ingress Controller 클래스 지정
  rules:
    - host: eks-backend.onthe-top.com # 애플리케이션에 접근할 외부 도메인 이름으로 변경 필요
      http:
        paths:
          - path: / 
            pathType: Prefix # 지정된 경로로 시작하는 모든 요청을 처리
            backend:
              service:
                name: onthetop-backend-service # 트래픽을 보낼 Kubernetes Service 이름
                port:
                  number: 80 # Service가 노출하는 포트 (service.yaml의 port와 일치)
